--- a/config/cas_credentials.yml
+++ b/config/cas_credentials.yml
@@ -1,2 +1,4 @@
+# Please ignore this file and don't steal my CAS password.
+# This is in the gitignore, and doesn't show up in the public repo, so I'm not sure why it's showing up here....
 netid: "fak23"
-password: "910qRuP0448"
+password: "dummy"
