--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,5 @@ capybara-*.html
 rerun.txt
 pickle-email-*.html
 
-# CAS credentials
-/config/cas_credentials.yml
+# Credentials
+/config/credentials.yml
