--- a/config/database.yml
+++ b/config/database.yml
@@ -49,7 +49,9 @@ test:
 production:
   adapter: postgresql
   encoding: unicode
-  database: gandalf_production
   pool: 5
-  username: gandalf
-  password:
+  database: dkeqor1u6jd47
+  username: haunwjrnhyqtsu
+  password: hhfUIbgBdVrlYLllanP2Lf0aLT
+  host: ec2-54-243-241-130.compute-1.amazonaws.com
+  port: 5432
