--- a/config/database.yml
+++ b/config/database.yml
@@ -50,8 +50,10 @@ production:
   adapter: postgresql
   encoding: unicode
   pool: 5
-  database: dkeqor1u6jd47
-  username: haunwjrnhyqtsu
-  password: hhfUIbgBdVrlYLllanP2Lf0aLT
-  host: ec2-54-243-241-130.compute-1.amazonaws.com
+  database: d5hr0s9hn7st22
+  username: jkbgcsndrlnluj
+  password: dcb8l4Z4PMwPnreRPAUN3F-iFO
+  host: ec2-107-21-107-3.compute-1.amazonaws.com
   port: 5432
+
+  
