--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,8 @@ capybara-*.html
 rerun.txt
 pickle-email-*.html
 
-# Credentials
-/config/credentials.yml
+# Credentials (but not in the production branch)
+# /config/credentials.yml
 
 *.DS_Store
 */tablesorter.js
