--- a/config/database.yml
+++ b/config/database.yml
@@ -20,24 +20,6 @@ development:
   username: gandalf
   password:
 
-  # Connect on a TCP socket. Omitted by default since the client uses a
-  # domain socket that doesn't need configuration. Windows does not have
-  # domain sockets, so uncomment these lines.
-  #host: localhost
-  #port: 5432
-
-  # Schema search path. The server defaults to $user,public
-  #schema_search_path: myapp,sharedapp,public
-
-  # Minimum log levels, in increasing order:
-  #   debug5, debug4, debug3, debug2, debug1,
-  #   log, notice, warning, error, fatal, and panic
-  # The server defaults to notice.
-  #min_messages: warning
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   adapter: postgresql
   encoding: unicode
@@ -50,10 +32,13 @@ production:
   adapter: postgresql
   encoding: unicode
   pool: 5
-  database: d5hr0s9hn7st22
-  username: jkbgcsndrlnluj
-  password: dcb8l4Z4PMwPnreRPAUN3F-iFO
-  host: ec2-107-21-107-3.compute-1.amazonaws.com
-  port: 5432
+  database: gandalf_development
+  username: gandalf
+  password:
+  # database: d5hr0s9hn7st22
+  # username: jkbgcsndrlnluj
+  # password: dcb8l4Z4PMwPnreRPAUN3F-iFO
+  # host: ec2-107-21-107-3.compute-1.amazonaws.com
+  # port: 5432
 
   
