--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ pickle-email-*.html
 
 # Credentials (but not in the production branch)
 /config/credentials.yml
+/config/newrelic.yml
 
 *.DS_Store
 */tablesorter.js
