all rspec tests passing, spork and guard enabled

--- a/config/credentials.yml
+++ b/config/credentials.yml
@@ -1,5 +1,5 @@
 netid: "fak23"
-password: "910qRuP0448"
+password: "1234jkl;"
 gmail: "faiaz.a.khan@gmail.com"
 sendgrid: "yalego"
 sendgrid_password: "yalego"
