--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,12 @@ capybara-*.html
 rerun.txt
 pickle-email-*.html
 
-# Credentials (but not in the production branch)
+# Credentials
 /config/credentials.yml
 /config/newrelic.yml
+
+# lib items
+lib/gappsprovisioning
 
 *.DS_Store
 */tablesorter.js
